2010-02-23  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* 初版
	
